--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -1,6 +1,6 @@
 #bloc-page {
   width: 100%;
-  height: 100%;
+  height: auto;
   margin: 0;
 }
 
@@ -112,9 +112,8 @@ li {
 #bas {
   background-color: #00796b;
   color: #ffd54f;
-  height: 5%;
+  height: auto;
   padding: 10px;
-  font-size: 1.1em;
   margin-top: 25px;
   left: 0;
   right: 0;
@@ -125,7 +124,8 @@ li {
       -ms-flex-pack: justify;
           justify-content: space-between;
   bottom: 0;
-  position: fixed;
+  position: -webkit-sticky;
+  position: sticky;
   margin-top: 60px;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -192,6 +192,7 @@ footer {
     height: auto;
   }
   .ul-m4 {
+    height: auto;
     margin-top: 0;
     font-size: 1.7em;
     padding: 0 10px;
@@ -202,6 +203,10 @@ footer {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  .m-1 {
+    margin: 0;
+    font-size: 1.5em;
   }
   li {
     list-style: none;
