--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -54,8 +54,6 @@
   width: 90%;
   margin: auto;
   background-color: #ffebee;
-  margin-bottom: 100px;
-  padding-bottom: 30px;
   -webkit-margin-bottom-collapse: separate;
 }
 
@@ -100,7 +98,6 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: 30px;
   width: 100%;
 }
 
@@ -163,6 +160,9 @@ li {
     margin: auto;
     width: auto;
   }
+  .titrem1 {
+    font-size: 2em;
+  }
   .ul-m4 {
     margin: 0;
   }
@@ -170,7 +170,7 @@ li {
     width: 100%;
     font-family: fantasy;
     height: auto;
-    margin-bottom: 30%;
+    margin-bottom: 30px;
     padding-bottom: 0;
   }
   .prix {
