--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -37,8 +37,6 @@
           width: 90%;
           margin: auto;
           background-color: #ffebee;
-          margin-bottom: 100px;
-          padding-bottom: 30px;
           -webkit-margin-bottom-collapse: separate;
       }
       .titrem1{
@@ -67,7 +65,6 @@
      .bas-m1{
          display: inline-flex;
          justify-content: center;
-         margin-top:30px;
          width: 100%;
      }
 
@@ -116,6 +113,9 @@
         margin: auto;
         width: auto;
     }
+    .titrem1{
+        font-size: 2em;
+    }
     .ul-m4{
         margin: 0;
     }
@@ -123,7 +123,7 @@
       width: 100%;
       font-family: fantasy;
       height: auto;
-      margin-bottom: 30%;
+      margin-bottom: 30px;
       padding-bottom: 0;
     }
       .prix {
