--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -119,15 +119,19 @@ html {
     margin-top: 30px;
     width: 100%;
   }
+  .gradient-m2 {
+    font-size: 4em;
+    display: inline-flex;
+    justify-content: center;
+    margin: auto;
+    width: 100%;
+  }
   @supports (mix-blend-mode: lighten) {
     .gradient-m2 {
-      font-size: 4em;
-      justify-content: center;
       position: relative;
       color: #000;
       background: #fff;
       mix-blend-mode: multiply;
-      margin: 0;
     }
     .gradient-m2::before {
       content: "";
@@ -167,11 +171,14 @@ li {
   #container-m2{
     width: 100%;;
     margin:0;
-    margin-bottom: 100px;
+    margin-bottom: 30px;
+    padding: 0;
   }
   .gradient-m2{
     margin:0;
+    font-size: 2em;
   }
+  
   .prix {
     float:none;
     display: flex;
@@ -179,6 +186,10 @@ li {
     margin-top:15px;
     margin: 0;
     padding: 0;
+  }
+  .m-2, .m-3, .m-4{
+    margin: 20px auto;
+    font-size: 1.5em;
   }
   .englobe-m2{
     flex-direction: column;
@@ -194,7 +205,7 @@ li {
     padding: 10px 0px;
   }
   .ul-m2{
-    font-size: 2em;
+    font-size: 1.7em;
     margin: auto;
     padding: 5px;
   }
