--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -1,5 +1,5 @@
 #container-m4 {
-  font-family: 'Exo', sans-serif;
+  font-family: 'Rokkitt', serif;
   width: 90%;
   height: auto;
   margin: auto;
@@ -78,9 +78,9 @@ li {
   height: 30px;
 }
 
-@media screen and (max-width: 970px) {
+@media screen and (max-width: 870px) {
   .gradient-m4 {
-    font-size: 1.3em;
+    font-size: 2em;
     text-align: center;
     display: inline-block;
     background: white;
@@ -91,6 +91,8 @@ li {
   #container-m4 {
     width: 100%;
     margin: 0;
+    margin-bottom: 30px;
+    padding: 0;
   }
   .block {
     -webkit-box-orient: vertical;
