--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -112,7 +112,7 @@ li {
 #bas {
   background-color: #00796b;
   color: #ffd54f;
-  height: auto;
+  height: 50px;
   padding: 10px;
   margin-top: 25px;
   left: 0;
