--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -1,4 +1,4 @@
-.page1, html {
+html, body {
   font-family: sans-serif;
   width: 100%;
   height: auto;
@@ -66,7 +66,7 @@
   /* Internet Explorer 9 */
   /* Opera */
   transform: scale(1.15);
-  opacity: 0.8;
+  opacity: 0.6;
 }
 
 @-webkit-keyframes thing {
@@ -165,38 +165,22 @@
   height: auto;
 }
 
-.mail:hover {
-  color: #ffd54f;
-  -webkit-animation: thing 0.1s;
-          animation: thing 0.1s;
-  -webkit-animation-iteration-count: 5;
-          animation-iteration-count: 5;
-}
-
-.mention:hover {
-  color: #ffd54f;
-  -webkit-animation: thing 0.1s;
-          animation: thing 0.1s;
-  -webkit-animation-iteration-count: 5;
-          animation-iteration-count: 5;
-}
-
 .menu {
   margin: 30px auto 30px auto;
   border: solid 1px #cfcfcf;
   width: 40%;
-  height: 700px;
+  height: 750px;
   overflow: hidden;
 }
 
 .menu img {
   width: 100%;
-  height: 700px;
+  height: 100%;
 }
 
 .menu img:hover {
-  -webkit-transition: 0.7s;
-  transition: 0.7s;
+  -webkit-transition: 0.9s;
+  transition: 0.9s;
   width: 100%;
   height: 700px;
 }
@@ -291,6 +275,77 @@
 
 .iconloupe {
   float: left;
+}
+
+#bas {
+  background-color: #00796b;
+  color: #ffd54f;
+  height: 50px;
+  padding: 10px;
+  margin-top: 25px;
+  left: 0;
+  right: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  bottom: 0;
+  position: -webkit-sticky;
+  position: sticky;
+  margin-top: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+footer {
+  font-family: sans-serif;
+}
+
+#bas a {
+  color: #ffd54f;
+  text-decoration: none;
+}
+
+#bas p:last-child {
+  text-align: right;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: end;
+}
+
+.mail:hover {
+  color: #ffd54f;
+  -webkit-animation: thing 0.1s;
+          animation: thing 0.1s;
+  -webkit-animation-iteration-count: 5;
+          animation-iteration-count: 5;
+}
+
+.mail {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mention {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.mention:hover {
+  color: #ffd54f;
+  -webkit-animation: thing 0.1s;
+          animation: thing 0.1s;
+  -webkit-animation-iteration-count: 5;
+          animation-iteration-count: 5;
+  text-align: left;
 }
 
 @media screen and (max-width: 870px) {
