--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -1,5 +1,5 @@
 
-.page1,html{
+html,body{
     font-family: sans-serif;
     width:100%;
     height:auto;
@@ -52,7 +52,7 @@
     -ms-transform:scale(1.15); /* Internet Explorer 9 */
     -o-transform:scale(1.15); /* Opera */
     transform:scale(1.15);
-    opacity: 0.8;
+    opacity: 0.6;
   }
 
   @keyframes thing{
@@ -86,39 +86,23 @@
     height: auto;
   }
 
-
-
-
-.mail:hover{
-  color:#ffd54f;
-    animation: thing 0.1s ;
-    animation-iteration-count: 5;
-}
-
-.mention:hover{
-  color:#ffd54f;
-  animation: thing 0.1s ;
-  animation-iteration-count: 5;
-  }
-
   .menu {
     margin: 30px auto 30px auto;
     border: solid 1px #cfcfcf;
     width: 40%;
-    height: 700px;
+    height: 750px;
     overflow: hidden;
     }
   
     .menu img {
     width:100%;
-    height:700px;
+    height:100%;
     }
     .menu img:hover {
-    transition: 0.7s;
+    transition: 0.9s;
     width:100%;
     height:700px;
     }
-
 
   @keyframes dots{
     0%{margin-top:0;}
@@ -182,6 +166,53 @@
 .iconloupe{
   float:left;
 }
+#bas{
+  background-color: #00796b;
+  color:#ffd54f;
+  height: 50px;
+  padding:10px;
+  margin-top:25px; 
+  left: 0; 
+  right: 0;
+  display:flex;
+  justify-content: space-between;
+  bottom: 0;
+  position: sticky; 
+  margin-top: 60px;
+  align-items: center;
+
+}
+footer{
+font-family: sans-serif;
+}
+#bas a{
+color:#ffd54f;
+text-decoration: none;
+}
+
+#bas p:last-child{
+text-align: right;
+display: flex;
+justify-content: end;
+}
+.mail:hover{
+color:#ffd54f;
+  animation: thing 0.1s ;
+  animation-iteration-count: 5;
+}
+
+.mail{
+display: flex;
+}
+.mention{
+display:flex;
+}
+.mention:hover{
+  color:#ffd54f;
+  animation: thing 0.1s ;
+  animation-iteration-count: 5;
+  text-align: left;
+  }
 
 @media screen and (max-width: 870px){
   #box1{
