commencement des modifs oubliés

--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -3,6 +3,10 @@
   height: auto;
   margin:0;
 }
+.T-header{
+  text-decoration: none;
+  color:#ffd54f;
+}
 .header{
     text-align: center;
     width: 100%;
