--- a/styles/partials/maquette.css
+++ b/styles/partials/maquette.css
@@ -161,7 +161,7 @@ html, body {
   background-color: #00796b;
   border-radius: 10px;
   width: 20%;
-  margin: auto auto 100px auto;
+  margin: 30px auto 100px auto;
   height: auto;
 }
 
@@ -348,7 +348,7 @@ footer {
   text-align: left;
 }
 
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 1150px) {
   #box1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -357,7 +357,7 @@ footer {
   }
   .menu {
     width: 100%;
-    height: 500px;
+    height: auto;
   }
   .menu img {
     height: 100%;
