--- a/styles/partials/maquette.scss
+++ b/styles/partials/maquette.scss
@@ -82,7 +82,7 @@ html,body{
     background-color: #00796b;
     border-radius: 10px;
     width: 20%;
-    margin: auto auto 100px auto;
+    margin: 30px auto 100px auto;
     height: auto;
   }
 
@@ -214,13 +214,13 @@ display:flex;
   text-align: left;
   }
 
-@media screen and (max-width: 870px){
+@media screen and (max-width: 1150px){
   #box1{
     flex-direction: column;
   }
   .menu{
     width: 100%;
-    height: 500px;
+    height: auto;
   }
   .menu img{
     height:100%;
