--- a/styles/partials/style.css
+++ b/styles/partials/style.css
@@ -4,6 +4,11 @@
   margin: 0;
 }
 
+.T-header {
+  text-decoration: none;
+  color: #ffd54f;
+}
+
 .header {
   text-align: center;
   width: 100%;
@@ -398,7 +403,7 @@ html, body {
   background-color: #00796b;
   border-radius: 10px;
   width: 20%;
-  margin: auto auto 100px auto;
+  margin: 30px auto 100px auto;
   height: auto;
 }
 
@@ -585,7 +590,7 @@ footer {
   text-align: left;
 }
 
-@media screen and (max-width: 870px) {
+@media screen and (max-width: 1150px) {
   #box1 {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
@@ -594,7 +599,7 @@ footer {
   }
   .menu {
     width: 100%;
-    height: 500px;
+    height: auto;
   }
   .menu img {
     height: 100%;
@@ -1561,6 +1566,21 @@ li {
   section {
     margin: 0;
   }
+}
+
+#bloc-page {
+  width: 100%;
+  height: auto;
+  margin: 0;
+}
+
+#container-mentions {
+  height: auto;
+  text-align: center;
+}
+
+p {
+  padding: 10px;
 }
 
 /*jh*/
