redimensionnage de tout les menus

--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -1,7 +1,7 @@
 
   #container-m1{
       width:100%;
-      height: auto;
+      height: 1650px;
   }
   .bloc-page-m1{
       margin:0;
@@ -35,6 +35,7 @@
           font-family: 'Neucha', cursive;
           position: relative;
           width: 90%;
+          height: 1300px;
           margin: auto;
           background-color: #ffebee;
           -webkit-margin-bottom-collapse: separate;
