--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -1,21 +1,19 @@
 
 
-html {
+#container-m-2{
   width: 100%;
-  height: auto;
+  height: 1650px;
 }
 
-#container-m2 {
+#carte-m2 {
   font-family: 'Parisienne', cursive;
   position: relative;
   background-color: #fdf5fe;
   display: flex;
   flex-direction: column;
   width: 90%;
-  height: auto;
+  height: 1300px;
   margin: auto;
-  margin-bottom: 100px;
-  padding-bottom: 30px;
   -webkit-margin-bottom-collapse: separate;
 }
 .bloc-page-m2{
@@ -24,11 +22,6 @@ html {
 #box-m2{
   display:flex;
   flex-direction: column;
-}
-
-.bloc-page-m2 {
-  font-family: sans-serif;
-  margin:0;
 }
   .m-2, .m-3, .m-4{
     margin: auto;
