--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -1,10 +1,11 @@
 #container-m4 {
+  height: 1350px;
+}
+
+#carte-m4 {
   font-family: 'Rokkitt', serif;
   width: 90%;
-  height: auto;
   margin: auto;
-  margin-bottom: 100px;
-  padding-bottom: 30px;
 }
 
 .light-m4 {
@@ -88,7 +89,7 @@ li {
     position: relative;
     margin: 0;
   }
-  #container-m4 {
+  #carte-m4 {
     width: 100%;
     margin: 0;
     margin-bottom: 30px;
