--- a/styles/partials/layout.css
+++ b/styles/partials/layout.css
@@ -1,6 +1,5 @@
 #bloc-page {
   width: 100%;
-  height: auto;
   margin: 0;
 }
 
@@ -12,7 +11,7 @@
 .header {
   text-align: center;
   width: 100%;
-  height: 130px;
+  height: auto;
   background-color: #00796b;
   color: #ffd54f;
   font-size: 1.3em;
@@ -99,8 +98,7 @@
 
 .ul-m4 {
   font-size: 1.7em;
-  padding: 0;
-  margin: 60px;
+  padding: 0 80px;
   list-style: none;
 }
 
@@ -115,11 +113,9 @@ li {
 }
 
 #bas {
+  height: 50px;
   background-color: #00796b;
   color: #ffd54f;
-  height: 50px;
-  padding: 10px;
-  margin-top: 25px;
   left: 0;
   right: 0;
   display: -webkit-box;
@@ -129,9 +125,7 @@ li {
       -ms-flex-pack: justify;
           justify-content: space-between;
   bottom: 0;
-  position: -webkit-sticky;
-  position: sticky;
-  margin-top: 60px;
+  position: fixed;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
