--- a/styles/partials/layout.scss
+++ b/styles/partials/layout.scss
@@ -1,6 +1,5 @@
 #bloc-page{
   width: 100%;
-  height: auto;
   margin:0;
 }
 .T-header{
@@ -10,7 +9,7 @@
 .header{
     text-align: center;
     width: 100%;
-    height:130px;
+    height:auto;
     background-color: #00796b;
     color:#ffd54f;
     font-size:1.3em;
@@ -71,8 +70,7 @@
 
   .ul-m4{
     font-size: 1.7em;
-    padding:0;
-    margin: 60px;
+    padding:0 80px;
     list-style: none;
 }
   li{
@@ -84,18 +82,15 @@
     font-size: 0.8em;
   }
   #bas{
-    background-color: #00796b;
-    color:#ffd54f;
     height: 50px;
-    padding:10px;
-    margin-top:25px; 
+    background-color: #00796b;
+    color:#ffd54f; 
     left: 0; 
     right: 0;
     display:flex;
     justify-content: space-between;
     bottom: 0;
-    position: sticky; 
-    margin-top: 60px;
+    position: fixed; 
     align-items: center;
 
 }
