--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -1,6 +1,6 @@
 #container-m1 {
   width: 100%;
-  height: auto;
+  height: 1650px;
 }
 
 .bloc-page-m1 {
@@ -52,6 +52,7 @@
   font-family: 'Neucha', cursive;
   position: relative;
   width: 90%;
+  height: 1300px;
   margin: auto;
   background-color: #ffebee;
   -webkit-margin-bottom-collapse: separate;
