--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -1,11 +1,10 @@
-    
-#container-m4 {
+#container-m4{
+    height: 1350px;
+}  
+#carte-m4 {
     font-family: 'Rokkitt', serif;
     width: 90%;
-    height: auto;
     margin: auto;
-    margin-bottom: 100px;
-    padding-bottom: 30px;
 }
 .light-m4 {
     padding: 0;
@@ -70,7 +69,7 @@
       
     }
 
-    #container-m4{
+    #carte-m4{
         width:100%;
         margin:0;
         margin-bottom: 30px;
