--- a/styles/partials/menu2.scss
+++ b/styles/partials/menu2.scss
@@ -164,8 +164,11 @@ li {
   #container-m2{
     width: 100%;;
     margin:0;
-    margin-bottom: 30px;
     padding: 0;
+  }
+  #carte-m2{
+    width:100%;
+    height:1750px;
   }
   .gradient-m2{
     margin:0;
