--- a/styles/partials/menu4.css
+++ b/styles/partials/menu4.css
@@ -80,6 +80,9 @@ li {
 }
 
 @media screen and (max-width: 870px) {
+  #container-m4 {
+    height: 1700px;
+  }
   .gradient-m4 {
     font-size: 2em;
     text-align: center;
