--- a/styles/partials/menu4.scss
+++ b/styles/partials/menu4.scss
@@ -57,7 +57,9 @@
        height: 30px;
    }
    @media screen and (max-width:870px){
-
+    #container-m4{
+        height: 1700px;
+    }
     .gradient-m4{
        font-size: 2em;
        text-align: center;
