--- a/styles/partials/mentions.scss
+++ b/styles/partials/mentions.scss
@@ -10,3 +10,10 @@
  p{
      padding:10px;
  }
+
+ @media screen and (max-width: 870px){
+    #container-mentions {
+        height: 850px;
+        text-align: center;
+      }
+ }
