--- a/styles/partials/menu1.css
+++ b/styles/partials/menu1.css
@@ -170,7 +170,6 @@ li {
   #container-m1 {
     width: 100%;
     font-family: fantasy;
-    height: auto;
     margin-bottom: 30px;
     padding-bottom: 0;
   }
@@ -203,7 +202,7 @@ li {
   }
   .carte-m1 {
     width: 100%;
-    height: auto;
+    height: 1750px;
     margin: 0;
     padding: 0;
   }
