--- a/styles/partials/menu1.scss
+++ b/styles/partials/menu1.scss
@@ -123,7 +123,6 @@
     #container-m1 {
       width: 100%;
       font-family: fantasy;
-      height: auto;
       margin-bottom: 30px;
       padding-bottom: 0;
     }
@@ -149,7 +148,7 @@
      }
      .carte-m1{
          width: 100%;
-         height: auto;
+         height: 1750px;
          margin:0;
          padding:0;
      }
