--- a/styles/partials/menu2.css
+++ b/styles/partials/menu2.css
@@ -223,8 +223,11 @@ li {
   #container-m2 {
     width: 100%;
     margin: 0;
-    margin-bottom: 30px;
     padding: 0;
+  }
+  #carte-m2 {
+    width: 100%;
+    height: 1750px;
   }
   .gradient-m2 {
     margin: 0;
